# FastZip

./: CHANGELOG.md  Cargo.toml  DESIGN.md  DEVELOPMENT_PLAN.md  README.md
.github/workflows/: ci.yml  release.yml
crates/fastzip-cli/: Cargo.toml
crates/fastzip-cli/src/: args.rs  main.rs
crates/fastzip-cli/tests/: extract_preserves_structure.rs  format_tests.rs  integration_test.rs  smart_extract_tests.rs
crates/fastzip-core/: Cargo.toml
crates/fastzip-core/src/: error.rs  lib.rs  path_utils.rs
crates/fastzip-core/src/compress/: mod.rs
crates/fastzip-core/src/extractor/: mod.rs
crates/fastzip-core/src/formats/: detect.rs  mod.rs  rar_format.rs  sevenz_format.rs  single.rs  tar_format.rs  zip_format.rs
crates/fastzip-core/src/smart_dest/: mod.rs
crates/fastzip-gui/: Cargo.toml  Trunk.toml  index.html
crates/fastzip-gui/src/: app.rs  archive_preview.rs  fonts.rs  lib.rs  main.rs
crates/fastzip-gui/src-tauri/: Cargo.toml  tauri.conf.json
crates/fastzip-gui/src-tauri/src/: lib.rs  main.rs
crates/fastzip-gui/style/: main.css
scripts/: README.md  build-low.ps1  install-linux.sh  install-macos.sh  install-windows.ps1  uninstall-windows.ps1
test_out/: README.md
