[package]
name = "fastzip-gui"
version = "0.1.0"
edition = "2021"
description = "FastZip 图形界面 (Leptos + Tauri)"

[lib]
name = "fastzip_gui"
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.6", features = ["csr"] }
tauri = { version = "2" }
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
